<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.matias.anda.views.Register"
    android:orientation="vertical"
    android:background="@color/blancoOscuro"
    android:padding="10dp"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:hint="@string/name"
            android:id="@+id/etName_r"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="50dp"
            android:backgroundTint="#85a4a2a2"
            android:textColor="#995486a7"
            android:textColorHint="#85a4a2a2"
            android:layout_marginTop="20dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:hint="@string/lastname"
            android:id="@+id/etApellido_r"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#85a4a2a2"
            android:textColor="#995486a7"
            android:textColorHint="#85a4a2a2"
            android:layout_height="50dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:hint="@string/email"
            android:id="@+id/etEmail_r"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#85a4a2a2"
            android:textColor="#995486a7"
            android:textColorHint="#85a4a2a2"
            android:layout_height="50dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:hint="@string/nickname"
            android:id="@+id/etNickname_r"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#85a4a2a2"
            android:textColor="#995486a7"
            android:textColorHint="#85a4a2a2"
            android:layout_height="50dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:hint="@string/password"
            android:id="@+id/etPassword_r"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#85a4a2a2"
            android:textColor="#995486a7"
            android:textColorHint="#85a4a2a2"
            android:layout_height="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Registrarse"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:padding="20dip"
            android:textColor="#eaeaea"
            android:textSize="20dp"
            android:textStyle="bold"
            android:backgroundTint="#3a3aff"/>
    </LinearLayout>

</LinearLayout>
