<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/blancoOscuro"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >



<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Imagen_detail"
        android:id="@+id/TV_image_detail"
        android:textColor="#000000"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_gravity="left"/>

    <ImageView
        android:id="@+id/foto_report_detail"
        android:layout_width="match_parent"
        android:background="#AADCDCDC"
        android:adjustViewBounds="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        />

    <!--
    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:background="#000000"
        android:layout_marginTop="50dp"
        android:scrollbarStyle="insideInset"
        android:layout_gravity="center_horizontal" />
        -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/map_detail"
        android:id="@+id/TV_map_detail"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_gravity="left"/>

    <com.google.android.gms.maps.MapView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapView_report_detail"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#AADCDCDC"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/mapa_report_detail"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/contenido"
        android:id="@+id/report_detail__contenido"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_marginRight="10dp"
        android:textColor="#000000"
        android:layout_gravity="left"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/void_string"
        android:id="@+id/report_detail_primero"
        android:layout_gravity="left|bottom"
        android:backgroundTint="#AADCDCDC"
        android:textColor="#995486a7"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp" />

    </LinearLayout>
    </ScrollView>
</LinearLayout>